<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/mann"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/book"
            android:title="@string/book" />
        <item
            android:id="@+id/test1"
            android:icon="@drawable/location"
            android:title="Hotel Locations"/>

        <item
            android:id="@+id/payHistory"
            android:icon="@drawable/history2"
            android:title="Payment History"/>

    </group>
</menu>